# Clinical-RAG-system

./: .gitignore  README.md  pyproject.toml
clinical_rag/: pipeline.py
clinical_rag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bias.py  test_evidence.py  test_fallback.py  test_retrieval.py
